--- a/.gitconfig
+++ b/.gitconfig
@@ -12,5 +12,4 @@
 	l = log --graph
 	hist = log --pretty=format:'[%ad] %h %an : %s' --graph --date=short
 [core]
-	autocrlf = input
-	safecrlf = true
+	autocrlf = false
